# crs-trucktrailer-ros2

./: README.md
crs_msgs/: CMakeLists.txt  package.xml
crs_msgs/msg/: CarCom.msg  CarInput.msg  CarLlControlInput.msg  CarStateCart.msg  CarSteerState.msg
custom_msg/: CMakeLists.txt  package.xml
custom_msg/msg/: TruckTrailerState.msg
relative_pose_handler/: package.xml  setup.cfg  setup.py
relative_pose_handler/relative_pose_handler/: car_publisher.py  pub_car_world_2_my_world.py  pub_controller_sim.py  pub_natnet_sim.py  trailer_publisher.py  truck_trailer_publisher.py  world_2_angle.py
vizualizer/: package.xml  setup.cfg  setup.py
vizualizer/vizualizer/: car_viz.py
wifi_com/: CMakeLists.txt  package.xml
wifi_com/config/: wifi_com.yaml
wifi_com/include/wifi_com/: WiFiCom.h
wifi_com/launch/: wifi_com.launch.py  wifi_com_default.launch.py
wifi_com/msgs/proto/: CarState.proto
wifi_com/src/: WiFiCom.cpp  wifi_com_node.cpp
